--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "istanbul": "^0.4.1",
     "mocha": "^2.3.4",
     "rimraf": "^2.4.5",
+    "sinon": "^1.17.3",
     "supertest": "^1.1.0",
     "we-core": "^0.3.111",
     "we-plugin-file": "^1.0.1",
