--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "we-plugin-group",
   "description": "We.js group plugin",
   "version": "0.3.10",
-  "main": "lib/index.js",
+  "main": "plugin.js",
   "scripts": {
     "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b "
   },
@@ -22,6 +22,10 @@
     "we-theme-site-wejs": "^0.3.31"
   },
   "license": "MIT",
+  "keywords": [
+    "we.js",
+    "wejs-plugin"
+  ],
   "wejs": {
     "dependencies": {
       "we-plugin-file": true,
