--- a/package.json
+++ b/package.json
@@ -1,34 +1,57 @@
 {
   "name": "we-plugin-group",
-  "description": "We.js groups plugin",
+  "description": "We.js groups, posts and membership plugin",
   "version": "1.0.5",
   "main": "plugin.js",
   "scripts": {
     "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b "
   },
   "devDependencies": {
-    "fs-extra": "^0.26.3",
-    "istanbul": "^0.4.1",
-    "mocha": "^2.3.4",
-    "rimraf": "^2.4.5",
-    "sinon": "^1.17.3",
-    "supertest": "^1.1.0",
-    "we-core": "^0.3.111",
-    "we-plugin-file": "^1.0.1",
-    "we-plugin-flag": "^1.0.1",
-    "we-plugin-vocabulary": "^0.3.20",
-    "we-test-tools": "^0.3.10",
-    "we-theme-admin-default": "^0.3.12",
+    "express-mysql-session": "^1.1.1",
+    "fs-extra": "^5.0.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.0.1",
+    "mysql2": "^1.5.2",
+    "sinon": "^4.4.1",
+    "supertest": "^3.0.0",
+    "we-core": "^2",
+    "we-plugin-acl": "^1.2.11",
+    "we-plugin-auth": "^2.0.0",
+    "we-plugin-email": "^1.3.1",
+    "we-plugin-file": "^2",
+    "we-plugin-file-local": "^1.2.0",
+    "we-plugin-flag": "^2",
+    "we-plugin-user": "^2",
+    "we-plugin-view": "^1.4.3",
+    "we-plugin-vocabulary": "^2",
+    "we-plugin-widget": "^2.0.0",
+    "we-test-tools": "^0.3.19",
     "we-theme-site-wejs": "^0.3.31"
   },
   "license": "MIT",
+  "repository": "wejs/we-plugin-group",
+  "author": "Alberto Souza <contato@albertosouza.net>",
   "keywords": [
     "wejs-plugin"
   ],
   "wejs": {
+    "plugins": {
+      "we-plugin-email": true,
+      "we-plugin-user": true,
+      "we-plugin-auth": true,
+      "we-plugin-acl": true,
+      "we-plugin-file": true,
+      "we-plugin-file-local": true,
+      "we-plugin-widget": true,
+      "we-plugin-flag": true,
+      "we-plugin-view": true,
+      "we-plugin-vocabulary": true
+    },
     "dependencies": {
+      "we-plugin-user": true,
       "we-plugin-file": true,
       "we-plugin-flag": true,
+      "we-plugin-view": true,
       "we-plugin-vocabulary": true
     }
   }
