--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
-sudo: required
-
 language: node_js
 
 node_js:
-  - '0.12'
+  - v6
 
 services:
   - mysql
@@ -11,8 +9,9 @@ services:
 env:
   NODE_ENV: 'test'
 
+notifications:
+  email:
+    - alberto@wejs.org
+
 before_script:
-  - sudo apt-get install graphicsmagick
   - mysql -e 'create database test;'
-  - npm install -g istanbul
-  - npm install -g mocha
