Update to we.js v3.x

--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "version": "2.0.2",
   "main": "plugin.js",
   "scripts": {
-    "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b "
+    "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b ",
+    "coverage": "NODE_ENV=test LOG_LV=info nyc ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b"
   },
   "devDependencies": {
     "connect-sqlite3": "^0.9.11",
-    "sqlite3": "^4.0.7",
-    "fs-extra": "^8.0.1",
-    "istanbul": "^0.4.5",
-    "mocha": "^6.1.4",
-    "sinon": "^7.3.2",
+    "fs-extra": "^8.1.0",
+    "mocha": "^7.0.0",
+    "nyc": "^15.0.0",
+    "sinon": "^8.0.4",
+    "sqlite3": "^4.1.1",
     "supertest": "^4.0.2",
-    "we-core": "^2",
-    "we-plugin-acl": "^1.2.14",
-    "we-plugin-auth": "^2.3.1",
-    "we-plugin-email": "^1.3.3",
-    "we-plugin-file": "^2",
-    "we-plugin-file-local": "^2.1.3",
+    "we-core": "^3.1.0",
+    "we-plugin-acl": "^1.2.16",
+    "we-plugin-auth": "^2.3.2",
+    "we-plugin-email": "^2.0.1",
+    "we-plugin-file": "^3",
+    "we-plugin-file-local": "^2.1.4",
     "we-plugin-flag": "^2",
     "we-plugin-user": "^2",
-    "we-plugin-view": "^1.5.0",
+    "we-plugin-view": "^2.0.0",
     "we-plugin-vocabulary": "^2",
     "we-plugin-widget": "^2.0.0",
-    "we-test-tools": "^0.3.22",
+    "we-test-tools": "^1.0.0",
     "we-theme-site-wejs": "^0.3.31"
   },
   "license": "MIT",
